# abcg

./: README.md  README_old.md
examples/: CMakeLists.txt
examples/amogus/: CMakeLists.txt  main.cpp  openglwindow.cpp  openglwindow.hpp
examples/amogus/assets/: amogus_cyan.mtl  amogus_pink.mtl  amogus_red.mtl  amogus_yellow.mtl
examples/gameoflife/: game.hpp
examples/loadmodel/: openglwindow.cpp  openglwindow.hpp
examples/loadmodel/assets/: loadmodel.frag  loadmodel.vert
examples/lookat/: camera.cpp  camera.hpp  openglwindow.hpp
examples/spacewalk/: CMakeLists.txt  main.cpp  openglwindow.cpp  openglwindow.hpp
examples/spacewalk/assets/: amogus.mtl
examples/starfield/: openglwindow.hpp
examples/viewer4/assets/: starship.mtl
examples/viewer6/: openglwindow.cpp
public/: amogus.html  index.html  spacewalk.html
