# add_subdirectory(helloworld)
# add_subdirectory(gameoflife)
# add_subdirectory(loadmodel)
# add_subdirectory(lookat)
# add_subdirectory(viewer1)
# add_subdirectory(starfield)
# add_subdirectory(viewer2)
# add_subdirectory(viewer3)
# add_subdirectory(viewer4)
# add_subdirectory(viewer5)
# add_subdirectory(viewer6)
add_subdirectory(amogus)
